--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ def is_admin(user):
 					     orange">History</h2>
 				  <section> </section>
 				  <section>
-				    <img src="img/guido.jpg">
+				    <img src="https://www.python.org/~guido/images/IMG_2192.jpg">
 				    <p><a href="https://www.python.org/~guido/">Guido
 				    van Rossum</a>, Dropbox</p>
 				  </section>
 				  <section>
-				    <img src="img/monty.jpg">
+				    <img src="http://ia.media-imdb.com/images/M/MV5BNzY1MDE5OTY4Ml5BMl5BanBnXkFtZTgwOTAyNTQ1NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
 				    <p><a href="http://www.imdb.com/title/tt0063929/">Monty Python's Flying Circus, 1969-1974</a></p>
 				  </section>
 				  <section>
@@ -224,9 +224,9 @@ def is_admin(user):
 				  </section>
 				  <section>
 				    <img height=350 width=450 src="img/expEYES Junior_02.jpg">
-				    <p><i>Python modules for ExpEYES
+				    <p style="font-size:70%"><i>Python modules for ExpEYES
 				    Junior developed by Dr. Ajith
-				    Kumar, IUAC, New Delhi</i></p>
+				    Kumar, IUAC, <br>New Delhi</i></p>
 				  </section>
 				  <section>
 				    <p>NASA, IBM, Yahoo, Walt Disney..</p>
