Local copy if Guido and Monty

--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ def is_admin(user):
 					     orange">History</h2>
 				  <section> </section>
 				  <section>
-				    <img src="https://www.python.org/~guido/images/IMG_2192.jpg">
+				    <img src="img/guido.jpg">
 				    <p><a href="https://www.python.org/~guido/">Guido
 				    van Rossum</a>, Dropbox</p>
 				  </section>
 				  <section>
-				    <img src="http://ia.media-imdb.com/images/M/MV5BNzY1MDE5OTY4Ml5BMl5BanBnXkFtZTgwOTAyNTQ1NjE@._V1_UX182_CR0,0,182,268_AL_.jpg">
+				    <img src="img/monty.jpg">
 				    <p><a href="http://www.imdb.com/title/tt0063929/">Monty Python's Flying Circus, 1969-1974</a></p>
 				  </section>
 				  <section>
